@@ -1,5 +1,6 @@
 plugins {
     kotlin("jvm") version "2.3.21"
+    id("application")
 }
 
 group = "org.example"
@@ -7,6 +8,11 @@ version = "1.0-SNAPSHOT"
 
 repositories {
     mavenCentral()
+}
+
+application {
+    mainClass.set("ClientKt")
+    applicationDefaultJvmArgs = listOf("--enable-native-access=ALL-UNNAMED")
 }
 
 dependencies {
@@ -19,4 +25,8 @@ kotlin {
 
 tasks.test {
     useJUnitPlatform()
+}
+
+tasks.withType<JavaExec> {
+    standardInput = System.`in`
 }
